# Crumb

./: .gitignore  CMakeLists.txt  README.MD
assets/shaders/: sprite.frag  sprite.vert
dependencies/glad/: glad.h
examples/TestGame/: TestApplication.cpp  TestApplication.h  main.cpp
examples/TestGame/GameObjects/: Player.cpp  Player.h
examples/TestGame/assets/shaders/: fragment.glsl
src/: TestApplication.cpp  TestApplication.h  glad.c  main.cpp
src/Core/: Application.cpp  Application.h  AssetManager.cpp  AssetManager.h  Engine.cpp  Engine.h  Event.h  EventDispatcher.h  InputManager.cpp  InputManager.h
src/Physics/: Collider.cpp  Collider.h  CollisionManager.cpp  CollisionManager.h
src/Rendering/: Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderSources.h  Sprite.cpp  Sprite.h
src/Scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SpriteGameObject.cpp  SpriteGameObject.h
src/Utilities/: KeyUtils.cpp  KeyUtils.h
